<resources>
    <string name="app_name">Wpan</string>

    <!--导航栏-->
    <string name="tab_home">首页</string>
    <string name="tab_exchange">交易</string>
    <string name="tab_share">晒单</string>

    <string name="propt_phone">请输入手机号</string>
    <string name="propt_identifying_code">请输入验证码</string>
    <string name="propt_identifying_code_voice">请输入语音验证码</string>
    <string name="propt_get_voice_code">获取语音验证码</string>
    <string name="btn_next">下一步</string>
    <string name="prop_user_pwd">请设置用户密码</string>
    <string name="set_trade_pwd">请输入您的交易密码</string>
    <string name="set_trade_pwd_confirm">验证输入您的交易密码</string>
    <string name="user_agreement">点击确定,即同意用户协议</string>
    <string name="btn_sure">确定</string>
    <string name="btn_sure_modify">确认修改</string>
    <string name="et_pet_name">输入昵称</string>
    <string name="et_trade_name">请输入交易密码</string>
    <string name="et_forget_pwd">忘记密码</string>
    <string name="et_logon">登录</string>
    <string name="et_register">注册</string>


    <string name="tv_share_ranking">您当前的排名:</string>

    <string name="rb_yesterday_star">昨日之星</string>
    <string name="rb_week_star">上周名人</string>
    <string name="rb_month_star">月度名人</string>


    <string name="btn_random">随机</string>

    <!--侧滑菜单栏-->
    <string name="security_rank">安全等级</string>
    <string name="my_assets">我的资产：</string>
    <string name="my_assets_num">%s 元</string>
    <string name="my_grade">我的积分：</string>
    <string name="my_grade_num">%s 分</string>
    <array name="drawer_setting">
        <item>我的关注</item>
        <item>我的推单</item>
        <item>我的晒单</item>
        <item>交易明细</item>
        <item>意见反馈</item>
        <item>产品评分</item>
        <item>关注我们</item>
    </array>

    <!--首页-->
    <string name="today_hot">今日头条</string>
    <string name="trace_bill">跟单</string>
    <string name="following_master_bill">高手操作实战跟单</string>
    <string name="history_master">历史高手</string>
    <string name="current_master">当前受益最高的牛人</string>
    <string name="immediately_master">即时高手</string>
    <string name="master_rank">高手排行榜</string>
    <string name="home_toolbar">喵仔微盘</string>
    <string name="yuan_per_kg">(元/千克)</string>
    <string name="price_wave_per">%1$s%2$s</string>
    <string name="max_price">最高</string>
    <string name="min_price">最低</string>
    <string name="today_price">今开</string>
    <string name="yesterday_price">昨开</string>
    <!--跟单-->
    <string name="create_package">建仓:</string>
    <string name="price">价位:</string>
    <string name="person_num">人数:</string>
    <!--交易-->
    <string name="exchange_assets">总资产(元)</string>
    <string name="exchange_ticket">体验券(张)</string>
    <string name="min_hour_line">分时线</string>
    <string name="min_15_line">15分钟线</string>
    <string name="min_60_line">60分钟线</string>
    <string name="min_day_line">日时线</string>
    <string name="buy_plus">买涨</string>
    <string name="buy_minus">买跌</string>
    <string name="today_exchange_data">今日交易大数据</string>
    <string name="create_package_price">建仓价</string>
    <string name="hold_storage_loss_or_profit">持仓亏盈(元)</string>
    <string name="balance_storage">平仓</string>

    <!--用户中心-->
    <string name="user_name">哈穆尔:</string>
    <string name="push_bill_notice">推单通知</string>
    <string name="special_notice">特别通知</string>
    <string name="user_trading_volume">今日200名用户交易320次</string>
    <string name="total_revenue">总收益</string>
    <string name="month_revenue">本月收益</string>
    <string name="week_revenue">本周收益</string>
    <string name="friend_tab_share">好友晒单</string>
    <string name="friend_push_bill">好友推单</string>
    <string name="receten_five_bill_income">最近五单收益</string>

    <!--用户中心-好友晒单-->
    <string name="share_bill_total_count">晒单总数:</string>
    <string name="share_bill_mouth_count">本月:</string>
    <string name="share_bill_week_count">本周:</string>
    <string name="share_bill_today_count">今日:</string>
    <string name="level_package">平仓:</string>
    <string name="user_revenue">总收益</string>

    <!--用户中心-好友晒单-->
    <string name="push_bill_count">推单总数:</string>
    <string name="month_win_rate">本月胜率</string>
    <string name="win_count">胜场</string>
    <string name="week_win_rate">本周胜率</string>
</resources>
