<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<include layout="@layout/layout_toorbar" />-->
    <include layout="@layout/layout_toorbar_with_right" />


    <EditText
        android:id="@+id/et_logon_phone"
        android:hint="@string/propt_phone"
        style="@style/style_et_phone" />

    <EditText
        android:id="@+id/et_logon_trade_pwd"
        android:hint="@string/et_trade_name"
        style="@style/style_et_phone" />

   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/et_forget_pwd"
       android:background="#ffffff"
       android:layout_gravity="right"/>

   <Button
       android:id="@+id/btn_register_next"
       android:text="@string/et_logon"
       style="@style/style_btn_next" />
</com.zhy.autolayout.AutoLinearLayout>