<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toorbar" />

    <EditText
        android:id="@+id/et_register_phone"
        android:hint="@string/propt_phone"
        style="@style/style_et_phone" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_marginTop="10px"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_register_code"
            android:layout_width="300px"
            android:layout_height="80px"
            android:layout_marginLeft="20px"
            android:hint="@string/propt_identifying_code" />

        <ImageView
            android:id="@+id/iv_identifying_code"
            android:layout_width="200px"
            android:layout_height="80px"
            android:layout_marginLeft="100px"
            android:layout_marginRight="20px"
            android:src="@mipmap/ic_launcher" />
    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_marginTop="10px"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_identifying_voice_code"
            android:layout_width="300px"
            android:layout_height="80px"
            android:layout_marginLeft="20px"
            android:hint="@string/propt_identifying_code_voice" />

        <Button
            android:id="@+id/btn_get_voice_code"
            android:layout_width="200px"
            android:layout_height="80px"
            android:layout_marginLeft="100px"
            android:layout_marginRight="20px"
            android:background="#e9573f"
            android:text="@string/propt_get_voice_code"
            android:textSize="24px"
            android:textColor="#ffffff"/>
    </com.zhy.autolayout.AutoLinearLayout>
    <EditText
        android:id="@+id/et_user_pwd"
        android:hint="@string/prop_user_pwd"
        style="@style/style_et_phone" />

   <Button
       android:id="@+id/btn_register_next"
       android:text="@string/btn_next"
       style="@style/style_btn_next" />
</com.zhy.autolayout.AutoLinearLayout>