<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--好友推单-->
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22px"
            android:layout_height="22px"
            android:layout_marginLeft="18px"
            android:src="@mipmap/icon4" />

        <TextView
            style="@style/style_friend_share_description"
            android:layout_marginLeft="10px"
            android:text="@string/push_bill_count" />

        <TextView
            android:id="@+id/tv_share_bill_total_count"
            style="@style/style_friend_share_count"
            android:text="222" />

        <TextView
            style="@style/style_friend_share_description"
            android:layout_marginLeft="20px"

            android:text="@string/share_bill_mouth_count" />

        <TextView
            android:id="@+id/tv_share_bill_month_count"
            style="@style/style_friend_share_count"
            android:text="333" />

        <TextView
            style="@style/style_friend_share_description"
            android:layout_marginLeft="20px"
            android:text="@string/share_bill_week_count" />

        <TextView
            android:id="@+id/tv_share_bill_week_count"
            style="@style/style_friend_share_count"
            android:text="333" />

        <TextView
            style="@style/style_friend_share_description"
            android:layout_marginLeft="20px"
            android:text="@string/share_bill_today_count" />

        <TextView
            android:id="@+id/tv_share_bill_today_count"
            style="@style/style_friend_share_count"
            android:text="333" />

    </com.zhy.autolayout.AutoLinearLayout>
    

</com.zhy.autolayout.AutoLinearLayout>