<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--<include layout="@layout/layout_toorbar"/>-->
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="270px"
        android:background="#0ff"
        android:orientation="vertical">

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="88px">

            <ImageView
                android:id="@+id/iv_user_home_back"
                android:layout_width="22px"
                android:layout_height="40px"
                android:layout_centerVertical="true"
                android:layout_marginLeft="18px"
                android:src="@mipmap/back1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/user_name"
                android:textColor="@color/color_toorbar"
                android:textSize="36px" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <ImageView
            android:layout_width="120px"
            android:layout_height="120px"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_person_right" />

        <TextView
            android:layout_width="180px"
            android:layout_height="50px"
            android:layout_gravity="center"
            android:layout_marginTop="5px"
            android:background="@color/red"
            android:gravity="center"
            android:text="@string/push_bill_notice"
            android:textColor="@color/white"
            android:textSize="30px" />
    </com.zhy.autolayout.AutoLinearLayout>


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="68px"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="36px"
            android:layout_height="36px"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_notice"
            android:layout_marginLeft="18px"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:text="@string/special_notice"
            android:textColor="@color/special_notice"
            android:textSize="28px"
            />

        <include layout="@layout/include_div_red" />

        <com.xinyu.mwp.view.AlwaysMarqueeTextView
            android:id="@+id/tv_special_notice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20px"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="今日200名用户交易320次"
            android:textColor="@color/gray_6"
            android:textSize="24px" />
    </com.zhy.autolayout.AutoLinearLayout>

    <!--三个收益界面-->
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:layout_marginTop="10px"
        android:clickable="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_total_revenue"
            android:text="@string/total_revenue"
            android:checked="true"
            android:textColor="@color/sel_share_font"
            style="@style/style_share_star" />

        <RadioButton
            android:id="@+id/rb_friend_share"
            android:text="@string/friend_tab_share"
            android:textColor="@color/sel_share_font"
            style="@style/style_share_star"/>

        <RadioButton
            android:id="@+id/rb_friend_push_bill"
            android:text="@string/friend_push_bill"
            android:textColor="@color/sel_share_font"
            style="@style/style_share_star"/>
    </RadioGroup>

    <com.xinyu.mwp.ui.viewpagers.NoScrollViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/vp_user_revenue"/>

</com.zhy.autolayout.AutoLinearLayout>