<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--用户总收益-->
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px">
        <!--环形图-->
        <ImageView
            android:layout_width="140px"
            android:layout_height="140px"
            android:layout_marginLeft="50px"
            android:src="@mipmap/ic_person_right" />

        <!--表格-->
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="358px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70px"
            android:background="@drawable/bg_user_revenue">

            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="179px"
                android:layout_height="140px"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/style_user_revenue"
                    android:text="@string/total_revenue" />

                <TextView
                    style="@style/style_user_revenue"
                    android:text="@string/month_revenue" />

                <TextView
                    style="@style/style_user_revenue"
                    android:text="@string/week_revenue" />
            </com.zhy.autolayout.AutoLinearLayout>

            <!--收益详情数据-->
            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="179px"
                android:layout_height="140px"
                android:background="@drawable/bg_user_revenue"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_user_total_revenue"
                    style="@style/style_user_revenue_data"
                    android:text="10.4%" />

                <TextView
                    android:id="@+id/tv_user_month_revenue"
                    style="@style/style_user_revenue_data"
                    android:text="10.44%" />

                <TextView
                    android:id="@+id/tv_user_week_revenue"
                    style="@style/style_user_revenue_data"
                    android:text="10.44%" />
            </com.zhy.autolayout.AutoLinearLayout>
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>

    <TextView
        android:layout_width="200px"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="74px"
        android:gravity="center"
        android:text="@string/receten_five_bill_income"
        android:textColor="@color/red"
        android:textSize="30px" />

    <include layout="@layout/include_div_red_horizontal" />

    <!--柱状图-->


</com.zhy.autolayout.AutoLinearLayout>