<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/tv_hold_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="111"
            android:textColor="@color/gray_6"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_hold_product_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="111"
            android:textColor="@color/gray_6"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_package_price"
            android:textColor="@color/gray_6"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_hold_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="111"
            android:textColor="@color/trace_bill_product"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/hold_storage_loss_or_profit"
        android:textColor="@color/gray_6"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_hold_product_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="111"
        android:textColor="@color/color_toorbar"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_hold_product_clear"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:background="@drawable/bg_tv_balance_storage"
        android:gravity="center"
        android:text="@string/balance_storage"
        android:textColor="@color/gray_6"
        android:textSize="16sp" />
</RelativeLayout>